--- a/students.html
+++ b/students.html
@@ -71,7 +71,7 @@
       <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
-    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now Research Intern at <a href="https://www.cs.kent.ac.uk/">University of Kent</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
