--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@ MPRI website</a>.</p>
     Aseem Rastogi, and
     Nikhil Swamy.
     <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
-    Draft of July 2016.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>
+    To appear, July 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -348,7 +349,8 @@ MPRI website</a>.</p>
     Benjamin C. Pierce,
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
-    arXiv:1607.05443. Draft of July 2016.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>
+    To appear, July 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
