--- a/publications.html
+++ b/publications.html
@@ -128,7 +128,7 @@
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
-    In 6th International Conference on Interactive Theorem Proving (ITP),
+    <a href="http://www.inf.kcl.ac.uk/staff/urbanc/itp-2015/">In 6th International Conference on Interactive Theorem Proving (ITP)</a>,
     volume 9236 of Lecture Notes in Computer Science, pages 325-343.
     Springer, August 2015.
   </li>
@@ -162,7 +162,6 @@
       20th International Conference on Architectural Support for Programming Languages
       and Operating Systems (ASPLOS)</a>, pages 487-502. ACM, March 2015.
   </li>
-
 
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
