--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,31 @@
 <ol start="7" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Danel Ahman,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Guido Martínez,
+    Gordon Plotkin,
+    Jonathan Protzenko,
+    Aseem Rastogi, and
+    Nikhil Swamy.
+    <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>
+    To appear, July 2016.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Leonidas Lampropoulos,
+    Diane Gallois-Wong,
+    C&#259;t&#259;lin Hri&#355;cu,
+    John Hughes,
+    Benjamin C. Pierce,
+    Li-yao Xia.
+    <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>
+    To appear, July 2016.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
             Arthur Azevedo de Amorim,
@@ -347,17 +372,6 @@
           Towards a Fully Abstract Compiler Using Micro-Policies:
           Secure Compilation for Mutually Distrustful Components</a></b>.
     Technical Report, arXiv:1510.00697, October 2015.
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Leonidas Lampropoulos,
-    Benjamin C. Pierce,
-    C&#259;t&#259;lin Hri&#355;cu,
-    John Hughes,
-    Zoe Paraskevopoulou,
-    Li-yao Xia.
-    <b><a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Making Our Own Luck: A Language for Random Generators.</a></b>
-    Draft of July 2015.
   </li>
 
 </ol>
