--- a/students.html
+++ b/students.html
@@ -24,7 +24,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD student at Inria and ENS Paris, starting 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
+    <li style="margin-top: 1ex;">PhD student at Inria and ENS Paris since 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
