--- a/students.html
+++ b/students.html
@@ -51,7 +51,7 @@
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/diane/report.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/alejandroag">Alejandro Aguirre</a>
   <ul>
