--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Research Cambridge</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li>
+  <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li> -->
 
@@ -102,8 +102,8 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust,
       POST 2017</a> (PC member)
   <ul>
-  <li>Abstract deadline: 14 October 2016</li>
-  <li>Submission deadline: 21 October 2016</li>
+  <!-- <li>Abstract deadline: 14 October 2016</li> -->
+  <!-- <li>Submission deadline: 21 October 2016</li> -->
   <li>Conference: 23-29 April 2017, Uppsala, Sweden</li>
   </ul>
   </li>
