--- a/publications.html
+++ b/publications.html
@@ -90,14 +90,15 @@
   <li style="margin-bottom: 1ex;">
     Danel Ahman,
     C&#259;t&#259;lin Hri&#355;cu,
+    Kenji Maillard,
     Guido Martínez,
     Gordon Plotkin,
     Jonathan Protzenko,
     Aseem Rastogi, and
     Nikhil Swamy.
     <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
-    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>
-    To appear, July 2016.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
+    To appear, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -108,8 +109,8 @@
     Benjamin C. Pierce,
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
-    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>
-    To appear, July 2016.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
+    To appear, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
