--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
     Danel Ahman,
     C&#259;t&#259;lin Hri&#355;cu,
+    Kenji Maillard,
     Guido Martínez,
     Gordon Plotkin,
     Jonathan Protzenko,
@@ -339,7 +340,7 @@ MPRI website</a>.</p>
     Nikhil Swamy.
     <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
     In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
-    To appear, July 2016.
+    To appear, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -351,7 +352,7 @@ MPRI website</a>.</p>
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
     In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
-    To appear, July 2016.
+    To appear, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
