--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ Research Cambridge</a>.</p>
 <a href="#contact">Contact</a>;
 <a href="#projects">Projects</a>;
 <a href="#interests">Interests</a>;
+<a href="#group">Group</a>;
 <a href="#publications">Publications</a>;
 <a href="#talks">Talks</a>;
 <a href="#teaching">Teaching</a>;
-<a href="#current-students">Students</a>;
 <a href="#tools">Tools</a>;
 <a href="#misc">Misc</a>
 </p>
@@ -322,6 +322,39 @@ MPRI website</a>.</p>
       secure hardware</li>
   </ul>
 
+<h2 id="group">Research Group</h2>
+
+<p>For a complete list of past students please look <a href="students.html">here</a>.</p>
+
+<ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.logic.at/staff/shaolin/">Tomer Libal</a> (Research Engineer)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Intern)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Theo Laurent</a> (Intern, MSc student at ENS Paris)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a>
+  <ul>
+    <li style="margin-top: 1ex;">PhD student at Inria and ENS Paris since 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
+  <ul>
+    <li style="margin-top: 1ex;">PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
+      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li>
+
+</ul>
+
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
 <p>For a complete list of my publications please look <a href="publications.html">here</a><!--<br/>-->
@@ -494,7 +527,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><b>Recent:</b> <em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
-      <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a>: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
+      <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
       <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
       <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li>
       <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
@@ -621,29 +654,6 @@ MPRI website</a>.</p>
 	(2011-11-30 and 2011-12-05)</li>
     </ul>
   </li>
-</ul>
-
-<h2 id="current-students">Currently Advised Students</h2>
-
-<p>For a complete list of past students please look <a href="students.html">here</a>.</p>
-
-<ul style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a>
-  <ul>
-    <li style="margin-top: 1ex;">PhD student at Inria and ENS Paris since 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
-  <ul>
-    <li style="margin-top: 1ex;">PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
-    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
-    </li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li>
-
 </ul>
 
 <h2 id="tools">Software Tools</h2>
