--- a/index.html
+++ b/index.html
@@ -336,20 +336,9 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="">Theo Laurent</a> (Intern, MSc student at ENS Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a>
-  <ul>
-    <li style="margin-top: 1ex;">PhD student at Inria and ENS Paris since 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
-  <ul>
-    <li style="margin-top: 1ex;">PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
-    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
-    </li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (Co-Supervised PhD Student, University of Pennsylvania</li>
 
 </ul>
 
