--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Theo Laurent</a> (Intern, MSc student at ENS Paris)</li>
+  <li style="margin-bottom: 1ex;"><a href="">Theo Laurent</a> (Intern, ENS Paris)</li>
 
 </ul>
 
