--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (Co-Supervised PhD Student, University of Pennsylvania)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (Co-Supervised PhD Student, UPenn)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
 
