--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a>
   (<a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
-   <a href="https://arxiv.org/abs/1607.05443">draft paper #3</a>,
+   <a href="https://arxiv.org/abs/1607.05443">paper #3</a>,
    <a href="https://github.com/QuickChick">code</a>)
   </li>
 </ul>
