--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;">26th European Symposium on Programming, ESOP 2018<a href="http://www.etaps.org/index.php/2018"></a> (PC member)
+  <ul>
+  <!-- <li>Abstract deadline: 14 October 2016</li> -->
+  <!-- <li>Submission deadline: 21 October 2016</li> -->
+  <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
+  </ul>
+  </li>
+
   <!-- <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations, CSF 2016</a> (PC member) -->
   <!-- <ul> -->
   <!-- <\!-- <li>Submission deadline: February 12, 2016</li> -\-> -->
@@ -338,7 +346,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Theo Laurent</a> (Intern, ENS Paris)</li>
+  <li style="margin-bottom: 1ex;"><a href="">Théo Laurent</a> (Intern, ENS Paris)</li>
 
 </ul>
 
