--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018">26th European Symposium on Programming, ESOP 2018<a href="http://www.etaps.org/index.php/2018"></a> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018">European Symposium on Programming, ESOP 2018<a href="http://www.etaps.org/index.php/2018"></a> (PC member)
   <ul>
   <!-- <li>Abstract deadline: 14 October 2016</li> -->
   <!-- <li>Submission deadline: 21 October 2016</li> -->
