--- a/service.html
+++ b/service.html
@@ -31,6 +31,11 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
+  Organizer of Secure Compilation Meetings (SCM) at Inria Paris
+  (13 invited participants, 17--19 August 2016) and POPL (15 January 2017)
+  </li>
+
+  <li style="margin-bottom: 1ex;">
   Main organizer of <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">Joint EasyCrypt-F*-CryptoVerif School 2014 in Paris</a> (over 80 participants)
   </li>
 
@@ -46,10 +51,12 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018">26th European Symposium on Programming (ESOP 2018)<a href="http://www.etaps.org/index.php/2018"></a></li>
+
   <li style="margin-bottom: 1ex;">
-  <b><a href="http://conf.researchr.org/home/POPL-2017">
+  <a href="http://conf.researchr.org/home/POPL-2017">
   44th ACM SIGPLAN Symposium on
-    Principles of Programming Languages (POPL 2017)</a></b>
+    Principles of Programming Languages (POPL 2017)</a>
   </li>
 
   <li style="margin-bottom: 1ex;">
