--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ MPRI website</a>.</p>
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue of the Journal of Computer Security on Verified Information Flow Security. To appear. September 2015.
+    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue of the Journal of Computer Security on Verified Information Flow Security, 24(6):689--734, December 2016.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
   </ul>
