--- a/index.html
+++ b/index.html
@@ -463,6 +463,9 @@ MPRI website</a>.</p>
     Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing
     Noninterference, Quickly</a></b>. Special Issue of Journal of
     Functional Programming (JFP) for ICFP 2013. 26:e4 (62 pages), April 2016.
+  <ul style="font-size: small">
+    <li><a href="https://github.com/QuickChick/TestingNoninterference">Testing code</a></li>
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
