--- a/publications.html
+++ b/publications.html
@@ -26,21 +26,6 @@
 
 <ol style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">
-    Arthur Azevedo de Amorim,
-    Nathan Collins,
-    André DeHon,
-    Delphine Demange,
-    C&#259;t&#259;lin Hri&#355;cu,
-    David Pichardie,
-    Benjamin C. Pierce,
-    Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue on Verified Information Flow Security. To appear. September 2015.
-  <ul style="font-size: small">
-    <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
     Leonidas Lampropoulos,
     Antal Spector-Zabusky,
@@ -51,7 +36,24 @@
     Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing
     Noninterference, Quickly</a></b>. Special Issue of Journal of
     Functional Programming (JFP) for ICFP 2013. 26:e4 (62 pages), April 2016.
-    Technical Report available as <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>.
+  <ul style="font-size: small">
+    <li><a href="https://github.com/QuickChick/TestingNoninterference">Testing code</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Arthur Azevedo de Amorim,
+    Nathan Collins,
+    André DeHon,
+    Delphine Demange,
+    C&#259;t&#259;lin Hri&#355;cu,
+    David Pichardie,
+    Benjamin C. Pierce,
+    Randy Pollack, and
+    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue of the Journal of Computer Security on Verified Information Flow Security, 24(6):689--734, December 2016.
+  <ul style="font-size: small">
+    <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a>; <a href="http://iospress.metapress.com/content/k28485h0t643/?p=f499e1ab872f49ddb4350156a27584e9&amp;pi=0"> Special Issue on Foundational Aspects of Security</a>, 22(2):301-353, February, 2014.
