--- a/publications.html
+++ b/publications.html
@@ -272,57 +272,27 @@
   <!-- <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Sabin Buraga. <a href="http://hritcu.wordpress.com/publications/adf-paper/">A Reference Implementation of ADF (Agent Developing Framework): Semantic Web-Based Agent Communication</a>. Seventh International Symposium on Symbolic and Numeric Algorithms for Scientific Computing (SYNASC'05), pages 199-206, IEEE Computer Society Press, September 2005.</li> -->
 </ol>
 
-<h3>Refereed Workshop Papers</h3>
-<ol start="24" style="width:42em; text-align: left">
+<!-- <h3>Refereed Workshop Papers</h3> -->
+<!-- <ol start="24" style="width:42em; text-align: left"> -->
 
-  <li style="margin-bottom: 1ex;">
-     Alejandro Aguirre,
-     C&#259;t&#259;lin Hri&#355;cu,
-     Chantal Keller,
-     and Nikhil Swamy.
-  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
-  Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
-  </li>
+<!--   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Thorsten Tarrach. <a href="publications/dverify-boogie-2011.pdf">Automatically Verifying Typing Constraints for a Data Processing Language</a>. <a href="http://research.microsoft.com/en-us/um/people/moskal/boogie2011/">First International Workshop On Intermediate Verification Languages (BOOGIE 2011)</a>, July 2011. -->
+<!--   <ul style="font-size: small"> -->
+<!--     <li>Implementation, Coq proofs and additional details available on the page of the <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify project</a>.</li> -->
+<!--   </ul> -->
+<!--   </li> -->
 
-  <li style="margin-bottom: 1ex;">
-      Udit Dhawan,
-      Albert Kwon,
-      Edin Kadric,
-      C&#259;t&#259;lin Hri&#355;cu,
-      Benjamin C. Pierce,
-      Jonathan M. Smith,
-      Gregory Malecha,
-      Greg Morrisett,
-      Thomas F. Knight, Jr.,
-      Andrew Sutherland,
-      Tom Hawkins,
-      Amanda Zyxnfryx,
-      David Wittenberg,
-      Peter Trei,
-      Sumit Ray,
-      Greg Sullivan, and
-      André DeHon,
-      <b><a href="http://www.crash-safe.org/assets/interlocks_ahns2012.pdf">Hardware Support for Safety Interlocks and Introspection</a></b>. In <a href="http://www.dollabs.com/ahanssaso2012.htm"> SASO Workshop on Adaptive Host and Network Security</a>, September 2012.
-  </li>
-
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Thorsten Tarrach. <a href="publications/dverify-boogie-2011.pdf">Automatically Verifying Typing Constraints for a Data Processing Language</a>. <a href="http://research.microsoft.com/en-us/um/people/moskal/boogie2011/">First International Workshop On Intermediate Verification Languages (BOOGIE 2011)</a>, July 2011.
-  <ul style="font-size: small">
-    <li>Implementation, Coq proofs and additional details available on the page of the <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify project</a>.</li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, Matteo Maffei, and Thorsten Tarrach. <a href="publications/zk-rcf-fcs2009.pdf">Type-checking Implementations of Protocols Based on Zero-knowledge Proofs - Work in Progress</a>. <a href="http://www.loria.fr/~cortier/FCS09/">Workshop on Foundations of Computer Security (FCS'09)</a>, August 2009.</li>
-  <li style="margin-bottom: 1ex;">Michael Backes, Martin Grochulla, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <a href="publications/zk-compromise-wits.pdf">Achieving Security Despite Compromise Using Zero-knowledge</a>. <a href="http://www.avantssar.eu/arspa-wits09/">Joint Workshop on Automated Reasoning for Security Protocol Analysis and Issues in the Theory of Security (ARSPA-WITS'09)</a>, March 2009.
-  </li>
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <a href="publications/typing-zk-wits-final.pdf">Type-checking Zero-knowledge</a>. <a href="http://profs.sci.univr.it/~vigano/fcs-arspa-wits08/">Joint Workshop on Foundations of Computer Security, Automated Reasoning for Security Protocol Analysis and Issues in the Theory of Security (FCS-ARSPA-WITS'08)</a>, June 2008.
-  </li>
-  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Jan Schwinghammer. <a href="http://hritcu.wordpress.com/publications/a-step-indexed-semantics-of-imperative-objects/">A Step-indexed Semantics of Imperative Objects</a>. <a href="http://fool08.kuis.kyoto-u.ac.jp/cfp.html">Workshop on Foundations of Object-Oriented Languages (FOOL'08)</a>, January 2008.</li>
-    <!--   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Iulian Goriac, Raluca Gord&#226;n, Elena Erbiceanu. <a href="http://hritcu.wordpress.com/publications/mpnt-paper/">Designing a Multi-Precision Number Theory Library</a>. <a href="http://thor.info.uaic.ro/~cipc/">NATO Advanced Research Workshop on Concurrent Information Processing and Computing</a>, July 2003. -->
-    <!--   <ul style="font-size: small"> -->
-    <!--     <li>Implemented as <a href="http://mpnt.sourceforge.net/">the MpNT library</a>.</li> -->
-    <!-- </ul> -->
-    <!--   </li> -->
-</ol>
+<!--   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, Matteo Maffei, and Thorsten Tarrach. <a href="publications/zk-rcf-fcs2009.pdf">Type-checking Implementations of Protocols Based on Zero-knowledge Proofs - Work in Progress</a>. <a href="http://www.loria.fr/~cortier/FCS09/">Workshop on Foundations of Computer Security (FCS'09)</a>, August 2009.</li> -->
+<!--   <li style="margin-bottom: 1ex;">Michael Backes, Martin Grochulla, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <a href="publications/zk-compromise-wits.pdf">Achieving Security Despite Compromise Using Zero-knowledge</a>. <a href="http://www.avantssar.eu/arspa-wits09/">Joint Workshop on Automated Reasoning for Security Protocol Analysis and Issues in the Theory of Security (ARSPA-WITS'09)</a>, March 2009. -->
+<!--   </li> -->
+<!--   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <a href="publications/typing-zk-wits-final.pdf">Type-checking Zero-knowledge</a>. <a href="http://profs.sci.univr.it/~vigano/fcs-arspa-wits08/">Joint Workshop on Foundations of Computer Security, Automated Reasoning for Security Protocol Analysis and Issues in the Theory of Security (FCS-ARSPA-WITS'08)</a>, June 2008. -->
+<!--   </li> -->
+<!--   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Jan Schwinghammer. <a href="http://hritcu.wordpress.com/publications/a-step-indexed-semantics-of-imperative-objects/">A Step-indexed Semantics of Imperative Objects</a>. <a href="http://fool08.kuis.kyoto-u.ac.jp/cfp.html">Workshop on Foundations of Object-Oriented Languages (FOOL'08)</a>, January 2008.</li> -->
+<!--     <\!--   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Iulian Goriac, Raluca Gord&#226;n, Elena Erbiceanu. <a href="http://hritcu.wordpress.com/publications/mpnt-paper/">Designing a Multi-Precision Number Theory Library</a>. <a href="http://thor.info.uaic.ro/~cipc/">NATO Advanced Research Workshop on Concurrent Information Processing and Computing</a>, July 2003. -\-> -->
+<!--     <\!--   <ul style="font-size: small"> -\-> -->
+<!--     <\!--     <li>Implemented as <a href="http://mpnt.sourceforge.net/">the MpNT library</a>.</li> -\-> -->
+<!--     <\!-- </ul> -\-> -->
+<!--     <\!--   </li> -\-> -->
+<!-- </ol> -->
 
 <h3>Theses</h3>
 <ol start="31" style="width:42em; text-align: left">
@@ -361,7 +331,7 @@
 
 <!--
 -->
-<h3>Drafts</h3>
+<h3>Informal</h3>
 <ol start="33" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
@@ -375,6 +345,36 @@
           Towards a Fully Abstract Compiler Using Micro-Policies:
           Secure Compilation for Mutually Distrustful Components</a></b>.
     Technical Report, arXiv:1510.00697, October 2015.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+     Alejandro Aguirre,
+     C&#259;t&#259;lin Hri&#355;cu,
+     Chantal Keller,
+     and Nikhil Swamy.
+  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
+  Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+      Udit Dhawan,
+      Albert Kwon,
+      Edin Kadric,
+      C&#259;t&#259;lin Hri&#355;cu,
+      Benjamin C. Pierce,
+      Jonathan M. Smith,
+      Gregory Malecha,
+      Greg Morrisett,
+      Thomas F. Knight, Jr.,
+      Andrew Sutherland,
+      Tom Hawkins,
+      Amanda Zyxnfryx,
+      David Wittenberg,
+      Peter Trei,
+      Sumit Ray,
+      Greg Sullivan, and
+      André DeHon,
+      <b><a href="http://www.crash-safe.org/assets/interlocks_ahns2012.pdf">Hardware Support for Safety Interlocks and Introspection</a></b>. In <a href="http://www.dollabs.com/ahanssaso2012.htm"> SASO Workshop on Adaptive Host and Network Security</a>, September 2012.
   </li>
 
 </ol>
