--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Théo Laurent</a> (Intern, ENS Paris)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="">Théo Laurent</a> (Intern, ENS Paris)</li> -->
 
 </ul>
 
@@ -369,8 +369,8 @@ MPRI website</a>.</p>
     Aseem Rastogi, and
     Nikhil Swamy.
     <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
-    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
-    To appear, January 2017.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+    pages 515--529. ACM, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -381,8 +381,8 @@ MPRI website</a>.</p>
     Benjamin C. Pierce,
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
-    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
-    To appear, January 2017.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+    pages 114--129. ACM, January 2017. 
   </li>
 
   <li style="margin-bottom: 1ex;">
