--- a/publications.html
+++ b/publications.html
@@ -294,16 +294,16 @@
 <!--     <\!--   </li> -\-> -->
 <!-- </ol> -->
 
-<h3>Theses</h3>
+<h3>PhD Thesis</h3>
 <ol start="24" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> January 2012.
   <ul style="font-size: small">
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
     </ul>
     </li>
-  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://hritcu.wordpress.com/publications/masters-thesis/">Step-indexed Semantic Model of Types for the Functional Object Calculus</a>. Master's Thesis, Saarland University, Saarbr&uuml;cken, Germany, May 2007.
-  <ul style="font-size: small">
-  <li>Awarded the <a href="http://www.fdsi.org/index.php?id=7">G&uuml;nter-Hotz Medal</a> by the "<a href="http://www.fdsi.org/">Freunde der Saarbr&uuml;cker Informatik</a>".</li>
+  <!-- <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://hritcu.wordpress.com/publications/masters-thesis/">Step-indexed Semantic Model of Types for the Functional Object Calculus</a>. Master's Thesis, Saarland University, Saarbr&uuml;cken, Germany, May 2007. -->
+  <!-- <ul style="font-size: small"> -->
+  <!-- <li>Awarded the <a href="http://www.fdsi.org/index.php?id=7">G&uuml;nter-Hotz Medal</a> by the "<a href="http://www.fdsi.org/">Freunde der Saarbr&uuml;cker Informatik</a>".</li> -->
   </ul>
   </li>
     <!--   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://hritcu.wordpress.com/publications/adf-thesis/">Agent Developing Platform: Agent Communication</a>. Licentiate Thesis. Advisor: Sabin Buraga, "Alexandru Ioan Cuza" University of Ia&#351;i, Romania, June 2005. -->
@@ -332,7 +332,7 @@
 <!--
 -->
 <h3>Informal</h3>
-<ol start="26" style="width:42em; text-align: left">
+<ol start="25" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
