--- a/index.html
+++ b/index.html
@@ -233,22 +233,25 @@ We are looking for talented, highly motivated students and young
 researchers, for research internships and for PhD, PostDoc, and
 Researcher positions. Here are three of my projects to which students
 could contribute:
+<!--(but there are many other possible ones):--></p>
 -->
 
-</p>
-<!--(but there are many other possible ones):--></p>
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io/">ERC SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></li>
+  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io/#relevant-publications">ERC SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a>
+(<a href="https://secure-compilation.github.io/">website</a>;
+ <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp-mpri.pdf">topics</a>;
+ <a href="https://secure-compilation.github.io/#relevant-publications">papers</a>)
+  </li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: From Program Verification System to Proof Assistant</a>
 (<a href="https://www.fstar-lang.org/">website</a>;
+ <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
-   <!-- <ul><li><b>PhD position available</b> (funded by -->
-   <!--         <a href="http://research.microsoft.com/en-us/collaboration/global/apply-europe.aspx">Microsoft Research PhD Scholarship Programme</a>)</li> -->
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a>
-  (<a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
+  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>
+   <a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
    <a href="https://arxiv.org/abs/1607.05443">paper #3</a>,
    <a href="https://github.com/QuickChick">code</a>)
