--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
 C. Pierce</a>.
-<!--I was a member of
-the <a href="http://www.cis.upenn.edu/~plclub/">Penn PL Club</a>.--></p>
+In October-November 2016 I was a Visiting Researcher at Microsoft Research
+Redmond.</p>
 
 <p style="width:42em; text-align: left"> I received my PhD
 <!--(summa cum laude)-->
