--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
 C. Pierce</a>.
-In October-November 2016 I was a Visiting Researcher at Microsoft Research
-Redmond.</p>
+In October-November 2016 I was a Visiting Researcher at
+<a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a>.</p>
 
 <p style="width:42em; text-align: left"> I received my PhD
 <!--(summa cum laude)-->
