--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@ could contribute:
 -->
 
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io/#relevant-publications">ERC SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a>
+  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io">Efficient Formally Secure Compilers to a Tagged Architecture</a>
 (<a href="https://secure-compilation.github.io/">website</a>;
  <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp-mpri.pdf">topics</a>;
  <a href="https://secure-compilation.github.io/#relevant-publications">papers</a>)
   </li>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">F*: From Program Verification System to Proof Assistant</a>
+  <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
 (<a href="https://www.fstar-lang.org/">website</a>;
  <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>
  <a href="https://github.com/FStarLang/FStar">code</a>;
