--- a/index.html
+++ b/index.html
@@ -236,20 +236,19 @@ could contribute:
 <!--(but there are many other possible ones):--></p>
 
 <ul>
-  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io">Efficient Formally Secure Compilers to a Tagged Architecture</a>
+  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a>
 (<a href="https://secure-compilation.github.io/">website</a>;
  <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp-mpri.pdf">topics</a>;
  <a href="https://secure-compilation.github.io/#relevant-publications">papers</a>)
   </li>
   <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
 (<a href="https://www.fstar-lang.org/">website</a>;
- <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>
+ <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
- <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a>
-  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>
+  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>;
    <a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
    <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
    <a href="https://arxiv.org/abs/1607.05443">paper #3</a>,
