--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;">Visiting researcher at <a href="http://research.microsoft.com/en-us/groups/rise/">Microsoft Research Redmond</a>, October - November 2016
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016 -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;">Participating in <a href="https://project-everest.github.io/">Project Everest</a>; a collaboration between Microsoft Research, Inria,<br/> and the community at large to build and deploy a verified HTTPS stack.</li>
 
