--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Ongoing</b>: Teaching <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a> at <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
+  <li style="margin-bottom: 1ex;"><b>Ongoing</b>: Teaching <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a> at<br/><a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
