--- a/students.html
+++ b/students.html
@@ -22,7 +22,7 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a>
   <ul>
     <li style="margin-top: 1ex;">PhD student at Inria and ENS Paris since 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
   </ul>
