--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting at POPL 2017</a> (Organizer)
+  <ul>
+  <li>Conference: 15 January 2017, Paris, France</li>
+  </ul>
+  </li>
+
   <!-- <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations, CSF 2016</a> (PC member) -->
   <!-- <ul> -->
   <!-- <\!-- <li>Submission deadline: February 12, 2016</li> -\-> -->
