--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting at POPL 2017</a> (Organizer)
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting at POPL 2017</a> (Co-organizer)
   <ul>
   <li>Conference: 15 January 2017, Paris, France</li>
   </ul>
