--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a> (Co-Supervised PhD Student, UPenn)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (Co-Supervised PhD Student, NU Rosario)</li>
+
   <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.logic.at/staff/shaolin/">Tomer Libal</a> (Research Engineer)</li>
