--- a/students.html
+++ b/students.html
@@ -39,7 +39,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at National University of Rosario since 2017-04:<br/></li>
+    <li style="margin-top: 1ex;">PhD Student at National University of Rosario since 2017-04, external co-supervisor</li>
   </ul>
   <ul>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
