--- a/students.html
+++ b/students.html
@@ -44,7 +44,7 @@
   <ul>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://yannis.computer/">Yannis Juglaret</a>
   <ul>
