--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.logic.at/staff/shaolin/">Tomer Libal</a> (Research Engineer)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Intern)</li>
 
